# gp8_control

./: .env.example  .gitignore  README.md  app.py  bridge.py  package.xml  pyproject.toml  queue_test_throw.py  setup.cfg  setup.py  terminal_debug.py
config/: apriltag_settings.yaml  apriltag_tags.yaml  realsense_camera_info.yaml  robot.yaml
controllers/: moveit_controller.py  pick_delay_tracker.py  trajectory_controller.py
gui/: device_monitor.py  manual_controller.py  server.py
gui/static/: index.html
gui/static/css/: base.css  camera.css  control.css  header.css  log.css  robot3d.css  status.css
launch/: debug_bringup.launch.py  debug_robot.launch.py  gp8_bringup.launch.py
mock/: mock_robot.py
model/: NN_newprimitive2_40000datapoint_500epochs_v2_B10.pt  fcn.py
perception/: apriltag_detector.py  camera_info_publisher.py  camera_manager.py  conveyor_speed.py  detection_intake.py  sam_client.py
planning/: __init__.py  pick_throw_planner.py  target_lock.py  throw_params.py
robots/: base_robot.py  gp8.py
tests/: __init__.py  queue_test.py  queue_test_throw.py
tracking/: __init__.py  frame_gate.py  object_queue.py
trajectory/: predictor.py  trajectory_primitive.py
utils/: lie_algebra.py  lie_numpy.py  ros_helpers.py
