<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gp8_control</name>
  <version>0.1.0</version>
  <description>Real robot control for Yaskawa GP8 pick-and-throw system</description>
  <maintainer email="fortriver54321@gmail.com">minu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_proc</depend>

  <!-- External ROS 2 packages -->
  <depend>motoros2_interfaces</depend>
  <depend>apriltag_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>robot_state_publisher</depend>

  <!-- MoveIt 2 -->
  <exec_depend>moveit</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
